--- a/code/html/Artikelliste.html
+++ b/code/html/Artikelliste.html
@@ -23,7 +23,7 @@
         <h2>Artikelliste</h2>
         <div class="suchleiste">
             <input type="text" placeholder="Suchleiste" id="searchBar" oninput="search()">
-            <button class="abs" id="addartikel" onclick="z_A()">Artikel hinzufügen </button>
+            <button class="abs" id="addartikel" onclick="z_A()">Artikel hinzuf&uuml;gen</button>
  
         </div>
  
@@ -50,7 +50,7 @@
             <br><input type="number" id="anzahl" placeholder="Verf&uuml;gbare Anzahl in Lager" required><br>
             <button onclick="artikelerstellen(); search()">Artikel erstellen</button>
  
-            <button onclick="sEingabe()">Zurück</button>
+            <button onclick="sEingabe()">Zur&uuml;ck</button>
  
         </form>
     </div>
@@ -65,7 +65,7 @@
             <br><input type="number" id="anzahl2" placeholder="Verf&uuml;gbare Anzahl in Lager" required><br>
             <button onclick="artikelbearbeiten(); search()">Artikel bearbeiten</button>
  
-            <button onclick="sbEingabe()">Zurück</button>
+            <button onclick="sbEingabe()">Zur&uuml;ck</button>
  
         </form>
     </div>
