--- a/code/html/admin.html
+++ b/code/html/admin.html
@@ -20,12 +20,12 @@
     <details class="container2 w2">
  
          
-        <summary> Ausklappen <h2>Rollen erstellung</h2> </summary>
+        <summary> Ausklappen <h2>Rollenerstellung</h2> </summary>
         <br>
         <form >
           <input type="text" placeholder="Name der Rolle" id="role_name">
           <br>
-          <label class="switch-label"><div class="right">Bearbeiten_und_L&ouml;schen</div>
+          <label class="switch-label"><div class="right">Bearbeiten und l&ouml;schen</div>
               <input type="checkbox" id="toggleEdit" class="switch-checkbox" />
               <span id="editslider" class="slider"></span>
             </label>
@@ -67,15 +67,15 @@
         
     </div>
       <details class="container2 w">
-          <summary> Ausklappen <h2>Registrierungsanfragen:</h2></summary>
+          <summary> Ausklappen <h2>Registrierungsanfragen</h2></summary>
           <br>
          <div class="table-wrapper">
             <table id="anfrageTable" class="tabelAnfrage">
                 <thead>
                    <tr>
                        <th class="aname">Name des neuen Nutzers</th>
-                       <th class="anfrage">Anfrage Annehmen</th>
-                       <th class="loeschen">Anfrage L&ouml;schen</th>
+                       <th class="anfrage">Anfrage annehmen</th>
+                       <th class="loeschen">Anfrage l&ouml;schen</th>
                    </tr>
                 </thead>
              </table>
