--- a/code/html/index.html
+++ b/code/html/index.html
@@ -48,7 +48,7 @@
             <div class="input-wrapper">
                 <input type="text" id="benutzername2" placeholder="Benutzername" required>
                 <div class="info-icon">i</div>
-                <div class="info">Wählen Sie einen Benutzernamen.</div>
+                <div class="info">W&auml;hlen Sie einen Benutzernamen.</div>
             </div>
             <div class="input-wrapper">
                 <input type="date" id="geb" required>
@@ -72,7 +72,7 @@
                 <div class="input-wrapper">
                     <input type="password" id="passwort2" placeholder="Passwort" required>
                     <div class="info-icon">i</div>
-                    <div class="info">Wählen Sie ein Passwort.</div>
+                    <div class="info">W&auml;hlen Sie ein Passwort.</div>
                 </div>
                 <div class="input-wrapper">
                     <input type="password" id="passwortw" placeholder="Passwort wiederholen" required>
