--- a/code/html/admin.html
+++ b/code/html/admin.html
@@ -25,7 +25,7 @@
         <form >
           <input type="text" placeholder="Name der Rolle" id="role_name">
           <br>
-          <label class="switch-label"><div class="right">Bearbeiten und l&ouml;schen</div>
+          <label class="switch-label"><div class="right">Bearbeitungsrechte</div>
               <input type="checkbox" id="toggleEdit" class="switch-checkbox" />
               <span id="editslider" class="slider"></span>
             </label>
